<resources>
    <string name="app_name">Lab4</string>
    <string name="addNote">Add new note</string>
    <string name="addNoteActivity">Add note activity</string>
    <string name="noteField">Note field</string>
    <string name="closeNote">close note</string>
    <string name="title">Title</string>
    <string name="id">ID</string>
    <string name="save">Save note</string>
    <string name="deleteNoteAcivity">Delete note activity</string>
    <string name="delete">Delete</string>
    <string name="empty">No more items to delete</string>
    <string name="Deleted">Deleted</string>
    <string name="emptyText">Can\'t be Empty text</string>
</resources>