<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/noteEditLayout"
    tools:context=".AddNoteActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp">


        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.793" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="onSaveandClose"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.434" />

        <ImageButton
            android:id="@+id/ibUpdateClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/closeNote"
            android:onClick="onCloseNote"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toEndOf="@+id/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494"
            app:srcCompat="@drawable/buttonx" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:autofillHints="note"
        android:background="#ffffff"
        android:contentDescription="@string/noteField"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/noteField"
        android:layout_marginTop="200dp"/>
</RelativeLayout>
