<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/noteEditLayout"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:autofillHints="note"
            android:background="#ffffff"
            android:contentDescription="@string/noteField"
            android:ems="10"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:labelFor="@id/editTextNote"
            />
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/editTextNote"
            android:layout_marginLeft="-43dp"
            android:layout_marginTop="1dp"
            android:layout_toRightOf="@id/editTextNote"
            android:onClick="onCloseNote"
            android:contentDescription="@string/closeNote"
            app:srcCompat="@drawable/buttonx" />




    </RelativeLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/mainNoteLayout"
        android:visibility="visible">
        <ListView
            android:id="@+id/noteListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="100dp">
        </ListView>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddNewNote"
            android:text="@string/addNote"
            android:layout_toRightOf="@id/noteListView"
            android:layout_marginLeft="-150dp"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>



</RelativeLayout>